# ServerBoizBot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: build-push.yaml
assets/: sbblogo.kra
bot/: __init__.py
bot/extensions/: example.py
core/: __init__.py
src/serverboizbot/: main.py
src/serverboizbot/bot/extensions/: .pibble_makes_life_easy.py.swp  example.py  git.py  heart.py  pc_part_picker.py  pibble_makes_life_easy.py
src/serverboizbot/core/: __init__.py  git_repo.py  pc_part_picker.py
tests/: conftest.py  test_example.py  test_git.py
tests/core/: pc_part_picker.py
tools/: README.md  create_extension.py  extension.py.j2
