[project]
name = "serverboizbot"
version = "0.1.0"
description = "Anything goes discord bot for ServerBoiz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py[voice]>=2.6.4",
    "dotenv>=0.9.9",
    "pyrootutils>=1.0.4",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "ruff>=0.14.11",
]

