[project]
name = "serverboizbot"
version = "0.1.0"
description = "Anything goes discord bot for ServerBoiz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py[voice]>=2.6.4",
    "dotenv>=0.9.9",
    "pyrootutils>=1.0.4",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "ruff>=0.14.11",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 999

[tool.uv]
package = true

[project.scripts]
serverboizbot = "serverboizbot.main:start"
